# wood_nano

./: .gitignore  .gitmodules  CMakeLists.txt  PYPI.md  README.md  build_wheel.sh  claude.md  environment.yml  pyproject.toml  requirements-dev.txt
.github/workflows/: build.yml  release.yml
data/: wood_beam_faces.txt  wood_beam_vertices.txt
logs/: 0_publish.txt  1_Build wheels on mac-intel.txt  2_Build wheels on mac-arm.txt  3_Build wheels on windows.txt  4_Build wheels on manylinux.txt  5_create_release.txt  6_Build source distribution.txt
logs/Build source distribution/: 1_Set up job.txt  2_Run actions_checkout@v4.txt  3_Build SDist.txt  4_Run actions_upload-artifact@v4.txt  8_Post Run actions_checkout@v4.txt  9_Complete job.txt  system.txt
logs/Build wheels on mac-arm/: 10_Post Run actions_checkout@v4.txt  11_Complete job.txt  1_Set up job.txt  2_Run actions_checkout@v4.txt  3_Install cibuildwheel.txt  4_Build wheels.txt  5_Run actions_upload-artifact@v4.txt  system.txt
logs/Build wheels on mac-intel/: 10_Post Run actions_checkout@v4.txt  11_Complete job.txt  1_Set up job.txt  2_Run actions_checkout@v4.txt  3_Install cibuildwheel.txt  4_Build wheels.txt  5_Run actions_upload-artifact@v4.txt  system.txt
logs/Build wheels on manylinux/: 10_Post Run actions_checkout@v4.txt  11_Complete job.txt  1_Set up job.txt  2_Run actions_checkout@v4.txt  3_Install cibuildwheel.txt  4_Build wheels.txt  5_Run actions_upload-artifact@v4.txt  system.txt
logs/Build wheels on windows/: 10_Post Run actions_checkout@v4.txt  11_Complete job.txt  1_Set up job.txt  2_Run actions_checkout@v4.txt  3_Install cibuildwheel.txt  4_Build wheels.txt  5_Run actions_upload-artifact@v4.txt  system.txt
logs/create_release/: 1_Set up job.txt  2_Run actions_checkout@v4.txt  3_Create GitHub Release.txt  6_Post Run actions_checkout@v4.txt  7_Complete job.txt  system.txt
logs/publish/: 10_Post Publish to PyPI.txt  11_Complete job.txt  1_Set up job.txt  2_Run actions_download-artifact@v4.txt  3_Run actions_download-artifact@v4.txt  4_List files before upload.txt  5_Publish to PyPI.txt  system.txt
src/: nanobind_binding.cpp
src/wood_nano/: __init__.py  conversions_python.py
tests/: test_basic.py  test_skeleton.py
