[build-system]
requires = ["scikit-build-core >=0.10", "nanobind >=1.3.2"]
build-backend = "scikit_build_core.build"

[project]
name = "wood_nano"
description = "Binding for wood project that is compiled into a binding using nanobind and scikit-build"
readme = "README.md"
requires-python = ">=3.9"
authors = [
    { name = "Petras Vestartas", email = "petrasvestartas@gmail.com" },
]
classifiers = [
    "License :: OSI Approved :: BSD License",
]
dynamic = ["version"]

[project.urls]
Homepage = "https://github.com/petrasvestartas/wood_nano"

# ============================================================================
# scikit-build
# ============================================================================

[tool.scikit-build]
minimum-version = "build-system.requires"
build-dir = "build/{wheel_tag}"
wheel.py-api = "cp312"
cmake.version = ">=3.15"
cmake.build-type = "Release"

[tool.scikit-build.metadata.version]
provider = "scikit_build_core.metadata.regex"
input = "src/wood_nano/__init__.py"

[tool.scikit-build.cmake.define]
CMAKE_POLICY_DEFAULT_CMP0135 = "NEW"

# ============================================================================
# cibuildwheel
# ============================================================================

[tool.cibuildwheel]
build-verbosity = 3
test-requires = ["pytest"]
test-command = "pytest {project}/tests"
build-frontend = "pip"
manylinux-x86_64-image = "manylinux_2_28"
skip = ["*_i686", "*-musllinux_*", "*-win32", "pp*"]
macos.environment.MACOSX_DEPLOYMENT_TARGET = "11.0"

# ============================================================================
# pytest
# ============================================================================

[tool.pytest.ini_options]
minversion = "6.0"
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py", "test.py"]

# ============================================================================
# bumpversion
# ============================================================================

[tool.bumpversion]
current_version = "0.2.0"
message = "Bump version to {new_version}"
commit = true
tag = true

[[tool.bumpversion.files]]
filename = "src/wood_nano/__init__.py"
search = "{current_version}"
replace = "{new_version}"
